ScrollBar progress (bugged)

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,10 @@ html {
   scroll-behavior: smooth;
 }
 
+::-webkit-scrollbar {
+  width: 0;
+}
+
 body {
   font-family: "Poppins", sans-serif;
   color: #ffdcc8;
